external-crates/move/crates/move-compiler/tests/move_2024/parser/lambda_expression_return_type_invalid.move
module a::m {
    macro fun call<$T>($f: || -> $T): $T {
        $f()
    }

    fun t() {
        call!(|| -> u64 0);
    }
}
